[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_API"]

[project]
name = "data-api"
version = "0.1.0"
description = "A data package manager to manage and access the OHLCV data of different instruments under the Data folder."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "line-profiler>=4.2.0",
    "pandas>=2.2.3",
    "polars>=1.19.0",
]

[project.urls]
"Homepage" = "https://github.com/cheesecakeMafia/data_API"